Use WriteImage for "Copy to clipboard" button.

Previously, "Copy to clipboard" button in screenshot notification was
not working properly with some websites e.g. Google Hangouts, while
it works as intended on some websites e.g. Google Docs.

The reason was because ChromeScreenshotGrabber was using
ScopedClipboardWriter::WriteHTML instead of WriteImage, by converting
the image to an HTML with img tag.

As a result, in a website that supports pasting HTML, it worked,
but in a website that only supports pasting of texts and images,
it didn't work.

TEST=ChromeScreenshotGrabberBrowserTest.TakeScreenshot
BUG=675050

Change-Id: Ic96121cc1fe28927c174c28c4f40e3d3e470ea42
Reviewed-on: https://chromium-review.googlesource.com/781342
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518515}
Former-commit-id: a6e33d4ee1539449f56053ce8523c338d247bff2